Fixed dorm leaderboard spacing bug

--- a/src/Pages/DormPage/Dorm.css
+++ b/src/Pages/DormPage/Dorm.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+.Dorm {
+        background-color: black;
+        font-family: 'Press Start 2P', cursive;
+        color: white;
+}
+
 #not_leaderboard {
         margin-top: 5vh;
         margin-left: 5%;
@@ -37,4 +43,13 @@
         font-size: 20px;
         text-align: left;
 }    
+
+#the_table {
+        padding: 2%;
+        border-style: solid;
+        border-radius: 5px;
+        border-color: #1919A6;
+        width: 80vw;
+        margin-left: 10vw;
+}
       
